fix(ui): make all pages responsive on mobile devices

--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -10,7 +10,7 @@
 html,
 body {
   overscroll-behavior: none;
-  overflow: hidden;
+  overflow-x: hidden;
   width: 100%;
   height: 100%;
 }
